--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -17,23 +17,6 @@ body {
   color: #fff;
 }
 
-// Utils
-.container {
-  max-width: 1100px;
-  margin: auto;
-  padding: 0 2rem;
-}
-
-.letter {
-  color: $gold;
-}
-
-a {
-  text-decoration: none;
-  color: #fff;
-  display: inline-block;
-}
-
 // header
 #header {
   height: 100vh;
@@ -156,6 +139,7 @@ a {
         h2 {
           margin: 0.5rem 0;
           text-transform: uppercase;
+          // color: $gold;
         }
 
         p {
