--- a/src/scss/media.scss
+++ b/src/scss/media.scss
@@ -94,6 +94,10 @@
             margin-bottom: 1.5rem !important;
             border-bottom: 1px dotted $medium-color;
           }
+
+          .p-lead {
+            font-size: 1.1rem;
+          }
         }
       }
     }
@@ -121,6 +125,9 @@
             display: block;
           }
         }
+      }
+      .latest-update {
+        width: 14rem;
       }
     }
   }
